--- a/test2.html
+++ b/test2.html
@@ -16,7 +16,7 @@
 
     vvv.addEventListener("click", function () {
         context.drawImage(videoElement, 0, 0, 800, 600);
-        aaa.href = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");
+        aaa.href = canvas.toDataURL("image/png");
     });
 
     var aaa = document.getElementById("button");
