--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </header>
         <div class="cd-panel-content">
             <div id="Butt">
-                <div class='panel-divs' id='index-Home'>
+                <div class='panel-divs' id=''>
 
                     <span id="toggling">Shopper</span>
                     <span id="toggleButton" onclick="toggles();" class="toggle-button">
