--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
                     console.log("getUpdate");
                     console.log(resp);
                     //TODO
-                    resp.isLoggedIn; //Call logout so it posts as well, and only do that
-                    resp.currentPage;
-                    resp.ticketId;
-                    resp.isDriver;
+//                    resp.isLoggedIn; //Call logout so it posts as well, and only do that
+//                    resp.currentPage;
+//                    resp.ticketId;
+//                    resp.isDriver;
                 }
             });
         },
