--- a/_congrats_ticket_closed.html
+++ b/_congrats_ticket_closed.html
@@ -4,10 +4,11 @@
         <div class="col-xs-12">
             <h2> Congratulations!</h2>
             </p>
-            We posted your ticket, and you will be notified as soon as it's accepted!
+            This ticket has been successfully closed.
             </p>
-            <button type="button" class="btn btn-link">Go To You Deliveries</button>
+            <button type="button" class="btn btn-link">Go To You Orders</button>
         </div>
     </div>
 </div>
 
+<script src="js/_congrats_ticket_closed.js"></script>
