shoppingStatus with js to load driver info

--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -4,14 +4,10 @@
     <div class="row">
         <div class="col-lg-offset-3 col-lg-6 col-sm-offset-3 col-sm-6">
             <div class="card hovercard">
-                <div class="card-background">
-                    <img class="card-bkimg shoppingStatus_avatar" src="http://lorempixel.com/100/100/people/9/">
-                </div>
-                <div class="useravatar">
-                    <img src="http://lorempixel.com/100/100/people/9/">
-                </div>
+                <div class="card-background"></div>
+                <div class="useravatar"></div>
                 <div class="card-info">
-                    <span class="card-title shoppingStatus_driver_name">TEMP</span>
+                    <span class="card-title shoppingStatus_driver_name"></span>
                 </div>
             </div>
         </div>
@@ -20,3 +16,4 @@
         Accepted Grocery List
     </button>
 </div>
+<script src="js/_shoppingStatus.js"></script>
