--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -1,5 +1,9 @@
 <div class="container text-center" id="_viewTicket">
 
+    <div class="col-xs-12">
+        <h2 id="listName"></h2>
+    </div>
+
     <div class="container box">
         <div class="row" >
             <div class="col-xs-12">
@@ -31,5 +35,4 @@
 
 </div>
 
-<script src="js/_driverList.js"></script>
-
+<script src="js/_viewTicket.js"></script>
