--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
                         if (window.location.hash.length > 0){
                             //submit or cancel ticket
                             goToPage(window.location.hash);
+                            window.location.hash = "";
                         }
                         else {
                             switch (data.currentPage) {
