shopping id unique

--- a/_shopping.html
+++ b/_shopping.html
@@ -14,7 +14,7 @@
                              placeholder="What do you need?" autocomplete="off"
                              autofocus/></span>
                 </form>
-                <ul id="list">
+                <ul id="shopping_list">
 
                 </ul>
             </div>
@@ -24,8 +24,8 @@
             <div class="col-xs-12">
                 <div class="todo-footer">
                     <div class = "row" id="footerInfo">
-                        <div class = "col-xs-4" id="numItems"></div>
-                        <button class = "col-xs-4" id="submit_list" type="button" class="btn btn-link">
+                        <div class = "col-xs-4" id="shopping_numItems"></div>
+                        <button class = "col-xs-4" id="shopping_submit_list" type="button" class="btn btn-link">
                             Submit
                         </button>
                     </div>
