--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 var whichid = allPages[j][i];
                 loadPage(whichid, j, i);
                 var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
-                $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
+              //  $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
             }
         }
 
