--- a/_checkout.html
+++ b/_checkout.html
@@ -2,25 +2,25 @@
     <div class="container-fluid text-center row">
         <div class="col-xs-2"></div>
         <div class="col-xs-8">
-            <h1>Checkout</h1>
+            <h2>Continue Checkout</h2>
 
             <h4>If driver cannot locate your specific item, buy... </h4>
-            <div class="list-group" id="notes" data-toggle="buttons">
+            <div class="list-group" id="checkout_notes" data-toggle="buttons">
                 <label class="btn list-group-item active">
-                    <input type="radio" name="specialnotes" id="option1" value="cheapest" autocomplete="off" checked>Cheapest option
+                    <input type="radio" name="specialnotes" id="checkout_option1" value="cheapest" autocomplete="off" checked>Cheapest option
                 </label>
                 <label class="btn list-group-item">
-                    <input type="radio" name="specialnotes" id="option2" value="expensive" autocomplete="off">Most expensive option
+                    <input type="radio" name="specialnotes" id="checkout_option2" value="expensive" autocomplete="off">Most expensive option
                 </label>
                 <label class="btn list-group-item">
-                    <input type="radio" name="specialnotes" id="option3" value="none" autocomplete="off">Nothing
+                    <input type="radio" name="specialnotes" id="checkout_option3" value="none" autocomplete="off">Nothing
                 </label>
             </div>
 
             <h4>Available times for drop-off.</h4>
             <div class="row">
                 <div class="form-group col-xs-5">
-                    <select class="form-control" id="time1">
+                    <select class="form-control" id="checkout_time1">
                         <option>9AM</option>
                         <option>10AM</option>
                         <option>11AM</option>
@@ -44,7 +44,7 @@
                     <p>to</p>
                 </div>
                 <div class="form-group col-xs-5">
-                    <select class="form-control" id="time2">
+                    <select class="form-control" id="checkout_time2">
                         <option>9AM</option>
                         <option>10AM</option>
                         <option>11AM</option>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="row" style="text-align: center">
-                <button type="button" id="submitcheckout" class="btn btn-default">Continue</button>
+                <button type="button" id="checkout_submitcheckout" class="btn btn-default">Continue</button>
                 <a href="/_homePage.html" class="btn btn-default" role="button">Close</a>
             </div>
 
