--- a/_congratsTicketClosed.html
+++ b/_congratsTicketClosed.html
@@ -6,7 +6,7 @@
             <p>
             This ticket has been successfully closed.
             </p>
-            <button type="button" class="btn btn-link">Go To You Orders</button>
+            <button type="button" class="btn btn-link" id="_congratsClosed">Go To You Orders</button>
         </div>
     </div>
 </div>
