--- a/_rateUser.html
+++ b/_rateUser.html
@@ -3,29 +3,27 @@
     <div class="container text-center">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4 col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
-                <h2 id="user-name" data-id="5876">User Name</h2>
+                <h2 id="user-name_rateUser" data-id="5876"></h2>
+                <h3>Rate the shopper!</h3>
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-2">
                         <img id="user-image" src="/placeholder/person.png"/>
                     </div>
                 </div>
                 <div class="rating">
-                    <span id="rating-1" class="glyphicon glyphicon-star"></span>
-                    <span id="rating-2" class="glyphicon glyphicon-star"></span>
-                    <span id="rating-3" class="glyphicon glyphicon-star"></span>
-                    <span id="rating-4" class="glyphicon glyphicon-star"></span>
-                    <span id="rating-5" class="glyphicon glyphicon-star"></span>
+                    <span id="rating-1" class="glyphicon glyphicon-heart"></span>
+                    <span id="rating-2" class="glyphicon glyphicon-heart"></span>
+                    <span id="rating-3" class="glyphicon glyphicon-heart"></span>
+                    <span id="rating-4" class="glyphicon glyphicon-heart"></span>
+                    <span id="rating-5" class="glyphicon glyphicon-heart"></span>
                 </div>
                 <div class="row">
                     <div class="col-xs-10 col-xs-offset-1">
                     <button id="rate-user" type="button" class="btn-block btn-lg btn-warning">
                         Rate!
                     </button>
-                    <button id="rate-skip" type="button" class="btn-block btn-lg btn-warning">
+                    <button id="rate-user-skip" type="button" class="btn-block btn-lg btn-warning">
                         Skip
-                    </button>
-                    <button id="simulate-load-user" type="button" class="btn-block btn-lg btn-warning">
-                        Simulate loading actual user
                     </button>
                 </div>
             </div>
@@ -33,5 +31,5 @@
     </div>
 </div>
 </div>
-<script src="js/_rating.js"></script>
+<script src="js/_rateUser.js"></script>
 
